--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <h2 ><span class="text-primary">The HIstory</span> Of Our Hotel  </h2>
     <p>Hotel Haven was established in the 21st Century, serving customers with the 
         utmost luxury and convenience that's affordable.
-        Our staff are professionally trained to offer you an axceptional customer experience 
-        and none of our customers reports otherwise. 
+        Our staff are professionally trained to provide you with the best customer experience.
 
     </p>
     <a href="#" class="btn btn-light">Read More</a>
@@ -68,7 +67,7 @@
 <div class="box bg-light">
         <i class="fa-solid fa-dumbbell fa-3x"></i>
         <h3>Fitness</h3>
-        <p>We have a place where you can exercise with a professional gym coach</p>
+        <p>Exercise for free with our equipments</p>
 </div>
 </section>
 <div class="clr"></div>
@@ -81,3 +80,4 @@
 
 </body>
 </html>
+
