Revise About page content and testimonials
Updated the About page content to enhance the description of Hotel Haven and added guest testimonials.

--- a/about.html
+++ b/about.html
@@ -33,8 +33,10 @@
     <div class="container">
         <div class="info-left">
             <h1 class="l-heading"><span class="text-primary ">About </span>Hotel Haven</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eveniet dolore aperiam veritatis perspiciatis. Excepturi placeat aliquam officiis omnis. Delectus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quae odit, animi esse cumque eum veritatis minima! Nostrum, nemo temporibus.</p>
+         <P>  Curious about what makes us different? It’s our commitment to you. Hotel Haven was built on the idea that you shouldn't have to compromise on quality to get a great rate. Our rooms are sanctuaries of calm, equipped with luxury essentials and modern tech to keep you connected.
+
+However, the real magic lies with our people. Our staff are more than just employees; they are Haven hosts, trained to anticipate your needs before you even ask. We take the 'ordinary' out of 'ordinary stay' and replace it with the axceptional.Stay and experience hospitality that actually cares.
+        </p>
         </div>
         <div class="info-right">
             <img src="./assets/building_sky.jpg" alt="hotel">
@@ -49,19 +51,25 @@
         <h2 class="l-heading">What Our Guests Say</h2>
     <div class="testimonial bg-primary" >
         <img src="./assets/woman.jpg" alt="woman">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, blanditiis aspernatur. Vero ut ipsum numquam, ipsa magni quidem, in assumenda esse reiciendis quibusdam sapiente tempore nisi atque dignissimos voluptas placeat blanditiis error consequuntur expedita explicabo omnis cupiditate eum excepturi porro.</p>
+<p>Excellent value and exceptional service."
+"Everything you want from a city hotel. Clean, modern, and the staff are incredibly friendly. Highly recommend."
+—Angela N., Solo Traveler 
+    </p>
     </div>
     
       <div class="testimonial bg-primary" >
         <img src="./assets/woman2.jpg" alt="woman">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, blanditiis aspernatur. Vero ut ipsum numquam, ipsa magni quidem, in assumenda esse reiciendis quibusdam sapiente tempore nisi atque dignissimos voluptas placeat blanditiis error consequuntur expedita explicabo omnis cupiditate eum excepturi porro.</p>
-    </div>
+<p>"Luxury I could actually afford."
+"I wanted to treat my partner to a special weekend away but was on a budget. Hotel Haven was the perfect find. The room looked like it belonged in a high-end magazine, but the bill didn't give me a heart attack. It’s amazing to know a place this nice was established recently because the facilities feel so fresh and modern."
+— Jessica L., Marketing Director
+    </p>
+      </div>
     </div>
 
 </section>
    
 <footer id="main-footer">
-    <p>Hotel Haven &copy; 2024 All Rights Reserved</p>
+    <p>Hotel Haven &copy; 2026 All Rights Reserved</p>
  
 </footer>
 
@@ -71,3 +79,4 @@
 
 </body>
 </html>
+
