--- a/about.html
+++ b/about.html
@@ -34,7 +34,6 @@
         <div class="info-left">
             <h1 class="l-heading"><span class="text-primary ">About </span>Hotel Haven</h1>
          <P>  Curious about what makes us different? It’s our commitment to you. Hotel Haven was built on the idea that you shouldn't have to compromise on quality to get a great rate. Our rooms are sanctuaries of calm, equipped with luxury essentials and modern tech to keep you connected.
-
 However, the real magic lies with our people. Our staff are more than just employees; they are Haven hosts, trained to anticipate your needs before you even ask. We take the 'ordinary' out of 'ordinary stay' and replace it with the axceptional.Stay and experience hospitality that actually cares.
         </p>
         </div>
@@ -51,15 +50,15 @@ However, the real magic lies with our people. Our staff are more than just emplo
         <h2 class="l-heading">What Our Guests Say</h2>
     <div class="testimonial bg-primary" >
         <img src="./assets/woman.jpg" alt="woman">
-<p>Excellent value and exceptional service."
-"Everything you want from a city hotel. Clean, modern, and the staff are incredibly friendly. Highly recommend."
+<p>Excellent value and exceptional service.
+Everything you want from a city hotel. Clean, modern, and the staff are incredibly friendly. Highly recommend.
 —Angela N., Solo Traveler 
     </p>
     </div>
     
       <div class="testimonial bg-primary" >
         <img src="./assets/woman2.jpg" alt="woman">
-<p>"Luxury I could actually afford."
+<p>Luxury I could actually afford.
 "I wanted to treat my partner to a special weekend away but was on a budget. Hotel Haven was the perfect find. The room looked like it belonged in a high-end magazine, but the bill didn't give me a heart attack. It’s amazing to know a place this nice was established recently because the facilities feel so fresh and modern."
 — Jessica L., Marketing Director
     </p>
@@ -79,4 +78,5 @@ However, the real magic lies with our people. Our staff are more than just emplo
 
 </body>
 </html>
+
 
